check trung du lieu, trang thai mac dinh